--- a/booking.html
+++ b/booking.html
@@ -662,8 +662,8 @@ function fillQRSummary() {
 }
 
 // You likely have code like this when booking is confirmed:
-function showConfirmationModal() {
-    fillQRSummary();
+// function showConfirmationModal() {
+//     fillQRSummary();
     // ...other modal open logic (likely already present)...
 }
 // If you have an event or function that shows the modal, ensure `fillQRSummary()` is called before displaying.
