--- a/booking.html
+++ b/booking.html
@@ -460,9 +460,8 @@
     </style>
             <div class="logo-icon">B</div>
             <span class="logo-text">bag<span>chk</span></span>
-        </a>
-<!--                     <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
-                    <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a> -->
+                    <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
+                    <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
                     <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
                 </div>
             </div>
