--- a/booking.html
+++ b/booking.html
@@ -422,7 +422,7 @@
         }
         .navbar {
             display: flex;
-            align-items: center;
+            align-items: right;
             padding: 15px 30px;
             background-color: #ffffff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
