--- a/booking.html
+++ b/booking.html
@@ -399,74 +399,42 @@
     </style>
 </head>
 <body>
-    <nav>
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16">
-                  <div class="nav-links flex items-center gap-3 sm:gap-5 lg:gap-6">
-                   <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-1 rounded transition">Home</a>
-                    <a href="#" class="logo">
-                <div class="flex items-center gap-3"> 
-                    <button class="theme-toggle" aria-label="Toggle dark mode">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 5v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-                        </svg>
-                    </button>
-                    <button class="hamburger" aria-label="Toggle navigation menu" role="button"><div></div><div></div><div></div></button>
-                </div>
-              
-                        <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', sans-serif;
-            background-color: #f5f7fa;
-        }
-        .navbar {
-            display: flex;
-            align-items: right;
-            padding: 15px 30px;
-            background-color: #ffffff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .logo {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-        }
-        .logo-text {
-            font-size: 24px;
-            font-weight: 700;
-            color: #1a1a1a;
-            letter-spacing: -0.5px;
-        }
-        .logo-text span {
-            color: #007bff;
-            background: linear-gradient(90deg, #007bff, #00d4ff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .logo-icon {
-            width: 30px;
-            height: 30px;
-            margin-right: 8px;
-            background: linear-gradient(45deg, #007bff, #00d4ff);
-            border-radius: 6px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #ffffff;
-            font-size: 18px;
-            font-weight: 600;
-        }
-    </style>
-            <div class="logo-icon">B</div>
-            <span class="logo-text">bag<span>chk</span></span>
-                    <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
-                    <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
-                    <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+<nav class="bg-white shadow">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between items-center h-16">
+      
+      <!-- Logo -->
+      <a href="index.html" class="flex items-center gap-2 logo">
+        <div class="logo-icon">B</div>
+        <span class="logo-text">bag<span>chk</span></span>
+      </a>
+
+      <!-- Navigation Links -->
+      <div class="hidden md:flex items-center gap-4 sm:gap-5 lg:gap-6 nav-links">
+        <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
+        <a href="index.html" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
+        <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
+        <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
+      </div>
+
+      <!-- Controls: Theme toggle & Hamburger -->
+      <div class="flex items-center gap-3">
+        <button class="theme-toggle" aria-label="Toggle dark mode">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 3v1m0 5v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+          </svg>
+        </button>
+        <button class="hamburger md:hidden" aria-label="Toggle navigation menu" role="button">
+          <div class="w-5 h-0.5 bg-gray-800 mb-1"></div>
+          <div class="w-5 h-0.5 bg-gray-800 mb-1"></div>
+          <div class="w-5 h-0.5 bg-gray-800"></div>
+        </button>
+      </div>
+    </div>
+  </div>
+</nav>
+
  <section id="book" class="booking-section">
         <div class="booking-container">
             <div class="carousel-container" role="region" aria-label="Promotional images carousel">
