--- a/booking.html
+++ b/booking.html
@@ -402,11 +402,8 @@
 <nav>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
-            <a href="index.html" aria-label="Bagchk Home" class="flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 40" class="h-8 sm:h-9 lg:h-10 max-w-[130px]" aria-hidden="true" role="img">
-                    <text x="0" y="28" font-family="Segoe UI, Roboto, Helvetica, Arial, sans-serif" font-size="28" font-weight="600" fill="#0F172A">Bag</text>
-                    <text x="65" y="28" font-family="Segoe UI, Roboto, Helvetica, Arial, sans-serif" font-size="28" font-weight="600" fill="#3B82F6">chk</text>
-                </svg>
+            <a href="index.html" aria-label="Bagchk Home" class="flex items-center font-extrabold text-xl sm:text-2xl lg:text-3xl text-[var(--text)]">
+                <span class="text-white dark:text-white">Bag</span><span class="text-blue-500">chk</span>
             </a>
 
             <div class="flex items-center gap-3">
@@ -430,7 +427,6 @@
         </div>
     </div>
 </nav>
-
 
  <section id="book" class="booking-section">
         <div class="booking-container">
