--- a/booking.html
+++ b/booking.html
@@ -402,7 +402,7 @@
 <nav>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
-            <a href="index.html" aria-label="Bagchk Home" class="flex items-center font-extrabold text-xl sm:text-2xl lg:text-3xl text-[var(--text)]">
+<!--             <a href="index.html" aria-label="Bagchk Home" class="flex items-center font-extrabold text-xl sm:text-2xl lg:text-3xl text-[var(--text)]">
                 <span class="text-white dark:text-white">Bag</span><span class="text-blue-500">chk</span>
             </a>
 
@@ -416,7 +416,26 @@
                 <button class="hamburger" aria-label="Toggle navigation menu" role="button">
                     <div></div><div></div><div></div>
                 </button>
-            </div>
+            </div> -->
+            <a href="index.html" aria-label="Bagchk Home" class="flex items-center text-[var(--text-color)]">
+  <svg viewBox="0 0 220 40" xmlns="http://www.w3.org/2000/svg" class="h-8 sm:h-9 lg:h-10 max-w-[140px]" role="img">
+    <style>
+      .logo-base {
+        font-family: 'Inter', 'Segoe UI', 'Helvetica Neue', sans-serif;
+        font-weight: 700;
+        font-size: 28px;
+        letter-spacing: -0.5px;
+        fill: currentColor;
+      }
+      .logo-accent {
+        fill: var(--primary-color, #3b82f6);
+      }
+    </style>
+    <text x="0" y="28" class="logo-base">Bag</text>
+    <text x="70" y="28" class="logo-base logo-accent">chk</text>
+  </svg>
+</a>
+
 
             <div class="nav-links flex items-center gap-3 sm:gap-5 lg:gap-6">
                 <a href="index.html#home" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
