--- a/booking.html
+++ b/booking.html
@@ -14,12 +14,21 @@
     <style>
         /* General enhancements */
         :root {
+  --primary-color: #3b82f6;
+  --text-color: #0f172a;
+}
+.dark {
+  --primary-color: #60a5fa;
+  --text-color: #f9fafb;
+}
+/* 
+        :root {
             --primary: #2563eb;
             --primary-dark: #1e40af; /* For hover effects */
             --background-light: #f9fafb;
             --shadow: rgba(0, 0, 0, 0.1);
         }
-
+ */
         .btn-primary {
             background-color: var(--primary);
             color: #fff;
@@ -402,10 +411,6 @@
 <nav>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
-<!--             <a href="index.html" aria-label="Bagchk Home" class="flex items-center font-extrabold text-xl sm:text-2xl lg:text-3xl text-[var(--text)]">
-                <span class="text-white dark:text-white">Bag</span><span class="text-blue-500">chk</span>
-            </a>
-
             <div class="flex items-center gap-3">
                 <button class="theme-toggle" aria-label="Toggle dark mode">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
