--- a/booking.html
+++ b/booking.html
@@ -430,7 +430,7 @@
                 <button class="hamburger" aria-label="Toggle navigation menu" role="button">
                     <div></div><div></div><div></div>
                 </button>
-            </div> -->
+            </div>
             <a href="index.html" aria-label="Bagchk Home" class="flex items-center text-[var(--text-color)]">
   <svg viewBox="0 0 220 40" xmlns="http://www.w3.org/2000/svg" class="h-8 sm:h-9 lg:h-10 max-w-[140px]" role="img">
     <style>
