--- a/index.html
+++ b/index.html
@@ -187,37 +187,49 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="fixed w-full z-20">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16">
-                <div class="flex items-center">
-                    <a href="#home">
-                                        <a href="index.html"><img src="/BagChk2.0/images/logo.jpg" alt="BagChk2.0 Logo" class="h-8 sm:h-9 lg:h-10 max-w-[130px] object-contain" loading="lazy"></a>
+   <nav>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-16">
+            <div class="flex items-center gap-3">
+                <button class="theme-toggle" aria-label="Toggle dark mode">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 3v1m0 5v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                    </svg>
+                </button>
+                <button class="hamburger" aria-label="Toggle navigation menu" role="button">
+                    <div></div><div></div><div></div>
+                </button>
+            </div>
+            <a href="index.html" aria-label="Bagchk Home" class="flex items-center text-[var(--text-color)]">
+  <svg viewBox="0 0 220 40" xmlns="http://www.w3.org/2000/svg" class="h-8 sm:h-9 lg:h-10 max-w-[140px]" role="img">
+    <style>
+      .logo-base {
+        font-family: 'Inter', 'Segoe UI', 'Helvetica Neue', sans-serif;
+        font-weight: 700;
+        font-size: 28px;
+        letter-spacing: -0.5px;
+        fill: currentColor;
+      }
+      .logo-accent {
+        fill: var(--primary-color, #3b82f6);
+      }
+    </style>
+    <text x="0" y="28" class="logo-base">Bag</text>
+    <text x="70" y="28" class="logo-base logo-accent">chk</text>
+  </svg>
+</a>
 
-<!--                     <img src="/BagChk2.0/logo.jpg" alt="Short-Term Storage" class="w-full h-40 sm:h-48 object-cover rounded-t-lg mb-4">
-                    </a> -->
-                </div>
-                <div class="flex items-center space-x-3">
-                    <button class="theme-toggle" aria-label="Toggle dark mode">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707m-12.728 12.728l.707-.707M17.657 17.657l.707-.707" />
-                        </svg>
-                    </button>
-                    <div class="hamburger" aria-label="Toggle navigation">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
-                </div>
-                <div class="nav-links flex items-center space-x-3 sm:space-x-5 lg:space-x-6">
-                    <a href="#home" class="text-[var(--text)] hover:text-[var(--primary)] px-2 py-2 rounded-md transition-colors">Home</a>
-                    <a href="#services" class="text-[var(--text)] hover:text-[var(--primary)] px-2 py-2 rounded-md transition-colors">Services</a>
-               <a href="#contact" class="text-[var(--text)] hover:text-[var(--primary)] px-2 py-2 rounded-md transition-colors">Contact</a>
-                    <a href="/BagChk2.0/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a> 
-                </div>
+
+            <div class="nav-links flex items-center gap-3 sm:gap-5 lg:gap-6">
+                <a href="index.html#home" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Home</a>
+                <a href="index.html#services" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Services</a>
+                <a href="index.html#contact" class="text-[var(--text)] hover:text-[var(--primary)] p-2 rounded transition">Contact</a>
+                <a href="#book" class="btn btn-primary p-2 sm:px-4 rounded">Book Now</a>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
     <section id="home" class="hero-image min-h-[60vh] sm:min-h-[70vh] flex items-center justify-center text-center text-white">
