--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Our Services</h2>
 
-            <p class="text-center mb-6 sm:mb-8 max-w-3xl mx-auto text-[var(--text-light)]">BagChk2.0 is a cutting-edge app platform revolutionizing luggage storage in Chicago. We seamlessly connect travelers with secure, affordable, and convenient storage options, so you can explore the city hands-free—no matter how long your adventure lasts.</p>
+            <p class="text-center mb-6 sm:mb-8 max-w-3xl mx-auto text-[var(--text-light)]">BagChk is a cutting-edge app platform revolutionizing luggage storage in Chicago. We seamlessly connect travelers with secure, affordable, and convenient storage options, so you can explore the city hands-free—no matter how long your adventure lasts.</p>
             
             <!-- Service Options -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
