--- a/booking.html
+++ b/booking.html
@@ -1,423 +1,193 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta charset="UTF-8">
-    <title>Book Luggage Storage - Bagchk</title>
-    <link rel="stylesheet" href="dist/styles.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>BagChk2.0 - Secure Luggage Storage in Chicago</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* General enhancements */
-        :root {
-  --primary-color: #3b82f6;
-  --text-color: #0f172a;
-}
-.dark {
-  --primary-color: #60a5fa;
-  --text-color: #f9fafb;
-}
-/* 
         :root {
             --primary: #2563eb;
-            --primary-dark: #1e40af; /* For hover effects */
-            --background-light: #f9fafb;
-            --shadow: rgba(0, 0, 0, 0.1);
-        }
- */
-        .btn-primary {
-            background-color: var(--primary);
-            color: #fff;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.2s;
+            --primary-dark: #1e40af;
+            --text: #1f2937;
+            --text-light: #4b5563;
+            --background: #f9fafb;
+            --card-bg: #ffffff;
+            --border: #d1d5db;
         }
 
-        .btn-primary:hover {
-            background-color: var(--primary-dark);
-            transform: translateY(-2px);
+        [data-theme="dark"] {
+            --primary: #60a5fa;
+            --primary-dark: #3b82f6;
+            --text: #e5e7eb;
+            --text-light: #9ca3af;
+            --background: #1f2937;
+            --card-bg: #374151;
+            --border: #4b5563;
         }
 
-        .btn-secondary {
-            background-color: var(--background-light);
-            color: var(--text, #333);
-            border: 1px solid var(--text-light, #6b7280);
-            border-radius: 6px;
-            cursor: pointer;
-            transition: background-color 0.3s;
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            margin: 0;
+            overflow-x: hidden;
+            background: var(--background);
+            color: var(--text);
+            transition: background 0.3s, color 0.3s;
         }
 
-        .btn-secondary:hover {
-            background-color: #e5e7eb;
+        .hero-image {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/images/background.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
-        .form-group {
-            margin-bottom: 1.5rem; /* Consistent spacing */
+        [data-theme="dark"] .hero-image {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/images/background.jpg');
         }
 
-        input, select, textarea {
-            border: 1px solid var(--text-light, #d1d5db);
-            border-radius: 6px;
-            transition: border-color 0.3s, box-shadow 0.3s;
+        h1, h2, h3 {
+            font-weight: 700;
+            line-height: 1.2;
         }
 
-        input:focus, select:focus, textarea:focus {
-            outline: none;
-            border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
-        }
+        h1 { font-size: clamp(2rem, 5vw + 1rem, 4rem); }
+        h2 { font-size: clamp(1.5rem, 3vw + 1rem, 2.5rem); }
+        p, li, a { font-size: clamp(0.875rem, 2vw + 0.75rem, 1.125rem); }
 
-        .valid-icon {
-            position: absolute;
-            right: 1rem;
-            top: 50%;
-            transform: translateY(-50%);
-            display: none;
-        }
-
-        input.valid + .valid-icon,
-        select.valid + .valid-icon {
-            display: block;
-            color: var(--success, #10b981);
-        }
-
-        /* Mobile-specific styles */
-        @media (max-width: 640px) {
-            body {
-                font-size: 0.875rem;
-            }
-            nav .max-w-7xl, 
-            .booking-container, 
-            .footer-container {
-                padding-left: 0.75rem;
-                padding-right: 0.75rem;
-                max-width: 100vw;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
-            h2 {
-                font-size: 1.25rem;
-            }
-            h3 {
-                font-size: 1rem;
-            }
-            .booking-grid {
-                display: flex;
-                flex-direction: column;
-                gap: 1.5rem;
-            }
-            .carousel-container {
-                min-height: 120px;
-                max-height: 140px;
-            }
-            .carousel-item {
-                background-size: cover;
-                background-position: center;
-                height: 120px;
-            }
-            .progress-bar {
-                flex-direction: column;
-                gap: 0.5rem;
-            }
-            .booking-summary, #map {
-                min-width: 0;
-                width: 100% !important;
-                max-width: 100vw;
-                height: 200px;
-            }
-            .form-group, .form-section {
-                width: 100%;
-                min-width: 0;
-            }
-            .form-group input,
-            .form-group select,
-            .form-group textarea,
-            .form-group button {
-                font-size: 0.875rem;
-                padding: 0.75rem;
-                min-height: 44px;
-                box-sizing: border-box;
-            }
-            .form-navigation {
-                flex-direction: column;
-                gap: 0.75rem;
-            }
-            .nav-links {
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                background: var(--background, #fff);
-                flex-direction: column;
-                display: none;
-                z-index: 99;
-                padding: 0.75rem;
-            }
-            .nav-links.active {
-                display: flex;
-            }
-            .hamburger {
-                display: flex !important;
-            }
-            .footer-container {
-                flex-direction: column;
-                gap: 1rem;
-                padding-bottom: 1.5rem;
-            }
-            .modal-content {
-                width: 90vw;
-                min-width: unset;
-                max-width: 100vw;
-                padding: 1rem;
-                box-sizing: border-box;
-            }
-            .qr-container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
-            }
-            #qrcode {
-                width: 150px;
-                height: 150px;
-            }
-            #download-qr, #add-to-calendar, #modal-close {
-                width: 100%;
-                min-height: 48px;
-                font-size: 0.875rem;
-            }
-        }
-
-        /* Desktop-specific styles */
-        @media (min-width: 641px) {
-            body {
-                font-size: 1rem;
-            }
-            nav .max-w-7xl,
-            .booking-container,
-            .footer-container {
-                max-width: 1280px;
-                padding-left: 2rem;
-                padding-right: 2rem;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            h1 {
-                font-size: 2.5rem;
-                line-height: 1.2;
-            }
-            h2 {
-                font-size: 1.75rem;
-            }
-            h3 {
-                font-size: 1.25rem;
-            }
-            .booking-grid {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                gap: 2rem;
-                align-items: start;
-            }
-            .carousel-container {
-                min-height: 200px;
-                max-height: 240px;
-            }
-            .carousel-item {
-                background-size: cover;
-                background-position: center;
-                height: 200px;
-            }
-            .progress-bar {
-                display: flex;
-                flex-direction: row;
-                gap: 1.5rem;
-                justify-content: center;
-            }
-            .progress-step {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 0.5rem;
-                min-width: 120px;
-            }
-            .booking-summary,
-            #map {
-                width: 100%;
-                height: 400px;
-                border-radius: 8px;
-                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            }
-            .form-group,
-            .form-section {
-                width: 100%;
-            }
-            .form-group input,
-            .form-group select,
-            .form-group textarea,
-            .form-group button {
-                font-size: 1rem;
-                padding: 1rem;
-                min-height: 48px;
-                border-radius: 6px;
-            }
-            .form-navigation {
-                display: flex;
-                flex-direction: row;
-                gap: 1rem;
-                justify-content: flex-end;
-            }
-            .nav-links {
-                display: flex;
-                flex-direction: row;
-                position: static;
-                background: none;
-                padding: 0;
-            }
-            .nav-links a {
-                font-size: 1rem;
-                padding: 0.5rem 1rem;
-            }
-            .hamburger {
-                display: none;
-            }
-            .footer-container {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                gap: 2rem;
-                padding: 2rem 0;
-            }
-            .modal-content {
-                width: 600px;
-                max-width: 90vw;
-                padding: 2rem;
-                border-radius: 12px;
-            }
-            .qr-container {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 1.5rem;
-            }
-            #qrcode {
-                width: 200px;
-                height: 200px;
-            }
-            #download-qr,
-            #add-to-calendar,
-            #modal-close {
-                padding: 0.75rem 1.5rem;
-                font-size: 1rem;
-                min-height: 52px;
-            }
-            .btn-primary {
-                padding: 0.75rem 1.5rem;
-                font-size: 1rem;
-                transition: background-color 0.3s, transform 0.2s;
-            }
-            .btn-primary:hover {
-                background-color: var(--primary-dark);
-                transform: translateY(-2px);
-            }
-            .btn-secondary {
-                padding: 0.75rem 1.5rem;
-                font-size: 1rem;
-            }
-            .trust-section {
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-                font-size: 1rem;
-                padding: 1rem;
-                background: var(--background-light);
-                border-radius: 8px;
-                margin-bottom: 1.5rem;
-            }
-            #distance-info {
-                font-size: 1rem;
-            }
-        }
-
-        /* General styles (unchanged) */
         .hamburger {
             display: none;
             flex-direction: column;
-            gap: 4px;
-            justify-content: center;
-            align-items: center;
-            width: 32px;
-            height: 32px;
+            cursor: pointer;
+            padding: 0.75rem;
+            gap: 0.25rem;
+            z-index: 30;
+        }
+
+        .hamburger div {
+            width: 28px;
+            height: 3px;
+            background: var(--text);
+            transition: all 0.3s ease;
+        }
+
+        .hamburger.active div:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .hamburger.active div:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active div:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -7px);
+        }
+
+        .nav-links {
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        nav {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(8px);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        }
+
+        [data-theme="dark"] nav {
+            background: rgba(31, 41, 55, 0.95);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .theme-toggle {
             background: none;
             border: none;
             cursor: pointer;
+            padding: 0.5rem;
+            display: flex;
+            align-items: center;
         }
-        .hamburger div {
-            width: 24px;
-            height: 3px;
-            background: var(--text, #333);
-            border-radius: 2px;
-            transition: all 0.3s;
+
+        .theme-toggle svg {
+            stroke: var(--text);
         }
-        .select-container {
-            position: relative;
-            width: 100%;
+
+        @media (max-width: 640px) {
+            .hamburger { display: flex; }
+            .nav-links {
+                display: none;
+                position: absolute;
+                top: 64px;
+                left: 0;
+                width: 100%;
+                background: var(--card-bg);
+                flex-direction: column;
+                padding: 1.5rem;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                transform: translateY(-10px);
+                opacity: 0;
+                z-index: 20;
+            }
+            .nav-links.active {
+                display: flex;
+                transform: translateY(0);
+                opacity: 1;
+            }
+            .nav-links a {
+                padding: 0.75rem 0;
+                text-align: center;
+            }
         }
-        .select-container select {
-            appearance: none;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>') no-repeat right 0.75rem center/16px 16px;
-            padding-right: 2.5rem;
-            max-height: 150px;
-            overflow-y: auto;
+
+        @media (max-width: 480px) {
+            .hero-image {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/background-mobile.jpg');
+            }
+            [data-theme="dark"] .hero-image {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/background-mobile.jpg');
+            }
         }
-        .select-container select:focus {
-            outline: none;
-            border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+
+        .animate-card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
-        .select-container select.error {
-            border-color: var(--error);
+
+        .animate-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
         }
-        .select-container select.valid {
-            border-color: var(--success);
+
+        [data-theme="dark"] .animate-card:hover {
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
         }
-        .confetti {
-            position: fixed;
-            width: 8px;
-            height: 8px;
-            opacity: 0.8;
-            animation: fall 2s linear;
+
+        .btn-primary {
+            background: var(--primary);
+            color: white;
+            transition: background 0.3s ease;
         }
-        @keyframes fall {
-            to { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+
+        .btn-primary:hover {
+            background: var(--primary-dark);
         }
-        ::selection {
-            background: var(--primary, #2563eb);
-            color: #fff;
+
+        input, textarea {
+            border-color: var(--border);
+            transition: border-color 0.3s, background 0.3s, color 0.3s;
         }
-        [data-theme="dark"] ::selection {
-            background: var(--primary, #60a5fa);
-            color: #000;
+
+        [data-theme="dark"] input, [data-theme="dark"] textarea {
+            border-color: var(--border);
+            background: var(--card-bg);
+            color: var(--text);
+        }
+
+        [data-theme="dark"] input::placeholder, [data-theme="dark"] textarea::placeholder {
+            color: var(--text-light);
         }
     </style>
-    <script>
-  const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-  if (prefersDark) {
-    document.documentElement.classList.add('dark');
-  } else {
-    document.documentElement.classList.remove('dark');
-  }
-</script>
-
 </head>
 <body>
-<nav>
+    <!-- Navigation -->
+   <nav>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
             <div class="flex items-center gap-3">
@@ -460,7 +230,6 @@
         </div>
     </div>
 </nav>
-
  <section id="book" class="booking-section">
         <div class="booking-container">
             <div class="carousel-container" role="region" aria-label="Promotional images carousel">
