--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>BagChk2.0 - Secure Luggage Storage in Chicago</title>
+    <title>BagChk - Secure Luggage Storage in Chicago</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
@@ -269,7 +269,7 @@
 
     <!-- Why Choose BagChk2.0 -->
     <div class="mt-8 sm:mt-12 text-center">
-        <h3 class="text-xl sm:text-2xl font-semibold mb-4">Why Choose BagChk2.0?</h3>
+        <h3 class="text-xl sm:text-2xl font-semibold mb-4">Why Choose BagChk?</h3>
         <ul class="text-[var(--text-light)] space-y-2 max-w-2xl mx-auto">
             <li>🔒 Partnered with vetted local businesses for secure storage locations</li>
             <li>🧳 Bags stored in secure areas, monitored by staff</li>
