--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 
         @media (max-width: 480px) {
             .hero-image {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/background-mobile.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/BagChk2.0/background.jpg');
             }
             [data-theme="dark"] .hero-image {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/background-mobile.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/BagChk2.0/background.jpg');
             }
         }
 
