--- a/index.html
+++ b/index.html
@@ -573,6 +573,15 @@
         // Load saved theme
         const savedTheme = localStorage.getItem('theme') || 'dark';
         html.setAttribute('data-theme', savedTheme);
+
+         @media (max-width: 480px) {
+            .hero-image {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/bagchk/background-mobile.jpg');
+            }
+            [data-theme="dark"] .hero-image {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/bagchk/background-mobile.jpg');
+            }
+        }
     </script>
 </body>
 </html>
