--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta charset="UTF-8">
@@ -114,7 +114,7 @@
 
         /* Hero Section */
         .hero-image {
-            background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('/BagChk2.0/background.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.65)), url('/BagChk2.0/background-mobile.jpg');
             background-size: cover;
             background-position: center;
             min-height: 60vh;
@@ -125,7 +125,7 @@
             color: #fff;
         }
         [data-theme="dark"] .hero-image {
-            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url('/BagChk2.0/background.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url('/BagChk2.0/background-mobile.jpg');
         }
 
         /* Responsive font sizes for headings */
