--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
         body {
             font-family: 'Inter', Arial, sans-serif;
-            background: var(--background-light);
+            background: var(--background-dark);
             color: var(--text);
             min-width: 0;
         }
