--- a/booking.html
+++ b/booking.html
@@ -430,12 +430,19 @@
 
  <section id="book" class="booking-section">
         <div class="booking-container">
+            
             <div class="carousel-container" role="region" aria-label="Promotional images carousel">
                 <div class="carousel-item active" style=" Easter Egg! You're a curious one, aren't you? 🕵️‍♂️ Here's a fun fact: Chicago's nickname 'The Windy City' isn't just about the weather—it's also a nod to its long-winded politicians! Keep exploring, and maybe you'll find more hidden gems! 😎"></div>
                 <div class="carousel-item" style="background-image: url('/BagChk2.0/images/sports.jpg')"></div>
                 <div class="carousel-item" style="background-image: url('/BagChk2.0/images/mpark.jpg')"></div>
             </div>
- 
+  <!-- Hero Section -->
+    <section id="home" class="hero-image min-h-[60vh] sm:min-h-[70vh] flex items-center justify-center text-center text-white">
+        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
+                    <a href="/bagchk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
+        </div>
+    </section>
             <h1 class="text-center mb-4">Secure Your Storage in Just a Minute!</h1>
             <div id="distance-info" class="text-center text-[var(--text-light)] mb-6" aria-live="polite"></div>
             <div class="trust-section">
